Tweak test fixture for integration tests

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -14,7 +14,7 @@ remove_prefix = tests/
 # Exclude directories and files from being watched.
 # The following are regular expressions and are matched against the full path.
 # Multiline values are combined into a single regular expression.
-exclude_directories = directory02
-    fixture\/$
+exclude_directories = \/directory02
+    fixture$
 
-exclude_files = file.*
+exclude_files = file01.*
