Add filter to cover Window's directory separator

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -16,5 +16,6 @@ remove_prefix = tests/
 # Multiline values are combined into a single regular expression.
 exclude_directories = \/directory02
     fixture$
+    \\directory02
 
 exclude_files = file01.*
