Add additional dimensions to config file

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -5,6 +5,13 @@ oldest_directory_row_days = 15
 oldest_file_row_days = 15
 max_files_per_directory = 10000
 
+[dimensions]
+# Dimensions are optional and can be used to add additional context to the metric.
+# By default directory file counts use "directory.file.count" as a dimension.
+# By default oldest file age uses "oldest.file.seconds" as a dimension.
+config.file.name = :memory:
+config.type = testing
+
 [watcher]
 # Metric names cannot contain spaces or commas.
 metric_name = test_watcher
