exclude top level directory

--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -20,5 +20,5 @@ remove_prefix =
 # Exclude directories and files from being watched.
 # The following are regular expressions and are matched against the full path.
 # Multiline values are combined into a single regular expression.
-exclude_directories =
+exclude_directories = smoketest_queues$
 exclude_files =
