Add emit config section

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -25,3 +25,8 @@ exclude_directories = \/directory02
     \\directory02
 
 exclude_files = file01.*
+
+[emit]
+# Emit metrics to the following destinations.
+stdout = true
+file = true
