Add database, stdout, and file output to smoketest

--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -1,5 +1,5 @@
 [system]
-database_path = :memory:
+database_path = smoketest.db
 max_is_running_seconds = 10
 oldest_directory_row_days = 14
 oldest_file_row_days = 14
@@ -22,3 +22,8 @@ remove_prefix =
 # Multiline values are combined into a single regular expression.
 exclude_directories = smoketest_queues$
 exclude_files =
+
+[emit]
+# Emit metrics to the following destinations.
+stdout = true
+file = true
