Add config_name for unique naming between configs

--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -1,4 +1,6 @@
 [system]
+# config_name should be unique for each configuration file.
+config_name = smoketest
 database_path = smoketest.db
 max_is_running_seconds = 10
 oldest_directory_row_days = 14
@@ -25,5 +27,5 @@ exclude_files =
 
 [emit]
 # Emit metrics to the following destinations.
-stdout = false
+stdout = true
 file = true
