--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -1,4 +1,6 @@
 [system]
+# config_name should be unique for each configuration file.
+config_name = test_watcher
 database_path = :memory:
 max_is_running_seconds = 60
 oldest_directory_row_days = 14
