Add interval and batch size to config

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -2,9 +2,16 @@
 # config_name should be unique for each configuration file.
 config_name = test_watcher
 database_path = :memory:
-max_is_running_seconds = 60
 oldest_directory_row_days = 14
 oldest_file_row_days = 14
+max_is_running_seconds = 60
+max_emit_line_count = 1000
+
+[intervals]
+# Intervals are only used when running with the `--loop` flag.
+# Intervals are in seconds.
+collect_interval = 5
+emit_interval = 20
 
 [dimensions]
 # Dimensions are optional and can be used to add additional context to the metric.
