--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -1,10 +1,23 @@
 [system]
 # config_name should be unique for each configuration file.
 config_name = smoketest
+
+# :memory: can be used here to use an in-memory database.
 database_path = smoketest.db
-max_is_running_seconds = 10
 oldest_directory_row_days = 14
 oldest_file_row_days = 14
+
+# Controls how long the is_running flag is valid for.
+max_is_running_seconds = 10
+
+# Controls how many lines are emitted in a single batch.
+max_emit_line_count = 500
+
+[intervals]
+# Intervals are only used when running with the `--loop` flag.
+# Intervals are in seconds.
+collect_interval = 5
+emit_interval = 60
 
 [dimensions]
 # Dimensions are optional and can be used to add additional context to the metric.
