Correct config description

--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -17,12 +17,11 @@ max_emit_line_count = 500
 # Intervals are only used when running with the `--loop` flag.
 # Intervals are in seconds.
 collect_interval = 5
-emit_interval = 60
+emit_interval = 10
 
 [dimensions]
 # Dimensions are optional and can be used to add additional context to the metric.
-# By default directory file counts use "directory.file.count" as a dimension.
-# By default oldest file age uses "oldest.file.seconds" as a dimension.
+# By default "root=..." is added as a dimension.
 config.file.name = smoketest.ini
 config.type = smoketest
 
