--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -15,8 +15,7 @@ emit_interval = 20
 
 [dimensions]
 # Dimensions are optional and can be used to add additional context to the metric.
-# By default directory file counts use "directory.file.count" as a dimension.
-# By default oldest file age uses "oldest.file.seconds" as a dimension.
+# By default "root=..." is added as a dimension.
 config.file.name = :memory:
 config.type = testing
 
