Add telegraf emitter config options

--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -41,3 +41,9 @@ exclude_files =
 # Emit metrics to the following destinations.
 stdout = true
 file = true
+
+# Telegraf agent must be running on the following host and port.
+telegraf = false
+telegraf_host = 127.0.0.1
+telegraf_port = 8080
+telegraf_path = /telegraf
