--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -38,3 +38,9 @@ exclude_files = file01.*
 # Emit metrics to the following destinations.
 stdout = true
 file = true
+
+# Telegraf agent must be running on the following host and port.
+telegraf = true
+telegraf_host = 127.0.0.1
+telegraf_port = 8080
+telegraf_path = /telegraf
