Add description of file output name

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -36,8 +36,9 @@ exclude_files = file01.*
 
 [emit]
 # Emit metrics to the following destinations.
-stdout = true
+# Filename will be <config_name>_<YYmmdd>_metric_lines.txt
 file = true
+stdout = true
 
 # Telegraf agent must be running on the following host and port.
 telegraf = true
