--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -39,8 +39,9 @@ exclude_files =
 
 [emit]
 # Emit metrics to the following destinations.
-stdout = true
+# Filename will be <config_name>_<YYmmdd>_metric_lines.txt
 file = true
+stdout = true
 
 # Telegraf agent must be running on the following host and port.
 telegraf = false
