--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -28,7 +28,7 @@ config.type = smoketest
 [watcher]
 # Metric names cannot contain spaces or commas.
 metric_name = smoketest_watcher
-root_directory = smoketest_queues
+root_directories = smoketest_queues
 remove_prefix =
 
 # Exclude directories and files from being watched.
