--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -22,7 +22,9 @@ config.type = testing
 [watcher]
 # Metric names cannot contain spaces or commas.
 metric_name = test_watcher
-root_directory = tests/fixture
+root_directories =
+    tests/fixture
+    tests/mock_directory
 remove_prefix = tests/
 
 # Exclude directories and files from being watched.
