Add oneagent config lines

--- a/tests/test_config.ini
+++ b/tests/test_config.ini
@@ -46,3 +46,9 @@ telegraf = true
 telegraf_host = 127.0.0.1
 telegraf_port = 8080
 telegraf_path = /telegraf
+
+# OneAgent must be running on the following host and port.
+oneagent = true
+oneagent_host = 127.0.0.1
+oneagent_port = 14499
+oneagent_path = /metrics/ingest
