--- a/smoketest/smoketest.ini
+++ b/smoketest/smoketest.ini
@@ -47,3 +47,9 @@ telegraf = false
 telegraf_host = 127.0.0.1
 telegraf_port = 8080
 telegraf_path = /telegraf
+
+# OneAgent must be running on the following host and port.
+oneagent = false
+oneagent_host = 127.0.0.1
+oneagent_port = 14499
+oneagent_path = /metrics/ingest
