--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,33 +9,27 @@ requires-python = ">=3.8"
 description = "Watches directories and files."
 readme = "README.md"
 license = { file = "LICENSE" }
-authors = [
-    { email = "preocts@preocts.com", name = "Preocts" }
-]
+authors = [{ email = "preocts@preocts.com", name = "Preocts" }]
 maintainers = []
 keywords = []
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: Implementation :: CPython"
+    "Programming Language :: Python :: Implementation :: CPython",
 ]
-# Dynamic dependencies are loaded from requirements*.txt files
-dynamic = ["dependencies", "optional-dependencies"]
+dependencies = []
 
-[tool.setuptools.dynamic.dependencies]
-file = ["requirements/requirements.txt"]
-
-[tool.setuptools.dynamic.optional-dependencies]
-dev = {file = ["requirements/requirements-dev.txt"]}
-test = {file = ["requirements/requirements-test.txt"]}
-
-# Alertative way to specify dependencies
-# dependencies = []
-
-# [project.optional-dependencies]
-# dev = []
-# test = []
+[project.optional-dependencies]
+dev = [
+    "pre-commit",
+    "black",
+    "mypy",
+    "flake8",
+    "flake8-builtins",
+    "flake8-pep585",
+]
+test = ["pytest", "pytest-randomly", "coverage", "nox"]
 
 [project.urls]
 homepage = "https://github.com/Preocts/walk-watcher"
@@ -46,12 +40,6 @@ homepage = "https://github.com/Preocts/walk-watcher"
 # CLI scripts if needed
 [project.scripts]
 walk-watcher = "walk_watcher.__main__:main"
-
-# [tool.setuptools.packages.find]
-# where = ["src"]  # ["."] by default
-# include = ["*"]  # ["*"] by default
-# exclude = ["tests"]  # empty by default
-# namespaces = true  # true by default
 
 [tool.setuptools.package-data]
 "walk_watcher" = ["py.typed"]
@@ -73,56 +61,18 @@ warn_unused_ignores = false
 
 [tool.coverage.run]
 branch = true
-source = [
-    "tests",
-]
-source_pkgs = [
-    "walk_watcher",
-]
+source = ["tests"]
+source_pkgs = ["walk_watcher"]
 
 [tool.coverage.paths]
-source = [
-    "src/",
-    "*/site-packages",
-]
-test = [
-    "tests/",
-    "*/tests",
-]
+source = ["src/", "*/site-packages"]
+test = ["tests/", "*/tests"]
 
 [tool.coverage.report]
-exclude_lines =[
+exclude_lines = [
     "pragma: no cover",
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     "\\.\\.\\.",
     "if TYPE_CHECKING:",
 ]
-
-[tool.tox]
-legacy_tox_ini = """
-[tox]
-envlist = py38,py39,py310,py311,py312,coverage,mypy
-skip_missing_interpreters = true
-isolated_build = True
-
-[testenv]
-deps =
-    .[test]
-commands =
-    coverage run -p -m pytest tests/
-
-[testenv:coverage]
-depends = py38,py39,py310,py311,py312
-parallel_show_output = true
-commands =
-    python -m coverage combine
-    python -m coverage report -m --fail-under=50
-    python -m coverage json
-
-[testenv:mypy]
-deps =
-    mypy
-commands =
-    mypy -p walk_watcher --no-incremental
-"""
